<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">HumanBerCalc</string>
	<string name="title_section1">Összegzés</string>
	<string name="title_section2">Számítás</string>
	<string name="title_section3">Section 3</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="mnuExit">Kilépés</string>
	<string name="txtHavOssz">Havi összesítés</string>
	<string name="txt8de">8 óra délelőtt :</string>
	<string name="txt8du">8 óra délután :</string>
	<string name="txt8ej">8 óra éjszaka :</string>
	<string name="txt8szo">8 óra szombaton :</string>
	<string name="txt8va">8 óra vasárnap :</string>
	<string name="txt12na">12 óra nappal :</string>
	<string name="txt12ej">12 óra éjszaka :</string>
	<string name="txt12szo">12 óra szombaton :</string>
	<string name="txt12Va">12 óra vasárnap :</string>
	<string name="txtSzab">Szabadság :</string>
	<string name="txtFizUnn">Fizetett ünnep :</string>
	<string name="txtAktHonap">Aktuális hónap :</string>
	<string name="txtSettings">Beállítások</string>
	<string name="txtSave">Mentés</string>
	<string name="txtExit">Kilépés</string>
	<string name="txtHaviOssz">Havi bérösszesítés</string>
	<string name="txtOraszam">Óraszám : </string>
	<string name="txtBer">Órabér össz. : </string>
	<string name="txtOsszesen">Összesen : </string>
	<string name="toast_pref_ures">Nem lehet üres! Adj meg valami értéket.</string>
	<string name="toast_pref_hibas">NYOMORÉK! Csak szám lehet!</string>
	<string name="toast_pref_nulla">Ingyen akarsz dolgozni??? Te tudod&#8230;)</string>
	<string name="toast_pref_minusz">Te fizetsz azért, hogy dolgozhass? Megérdemled!</string>

</resources>