<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/textView1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center"
		android:paddingBottom="15dp"
		android:text="@string/txtSettings"
		android:textAppearance="?android:attr/textAppearanceLarge" />

	<ScrollView
		android:id="@+id/idSView"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

				<TextView
					android:id="@+id/textView2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/txt8de"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/edit8de"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:inputType="number" >

					<requestFocus />
				</EditText>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal" >

				<TextView
					android:id="@+id/textView3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/txt8du"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/edit8du"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:ems="10"
					android:inputType="number" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

				<TextView
					android:id="@+id/textView4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/txt8ej"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/edit8ej"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:inputType="number" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

				<TextView
					android:id="@+id/textView5"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/txt8szo"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/edit8szo"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:inputType="number" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

				<TextView
					android:id="@+id/textView6"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/txt8va"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/edit8va"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:inputType="number" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

				<TextView
					android:id="@+id/textView7"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/txt12na"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/edit12na"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:inputType="number" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent" >

				<TextView
					android:id="@+id/textView8"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/txt12ej"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/edit12ej"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:inputType="number" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent" >

				<TextView
					android:id="@+id/textView9"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/txt12szo"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/edit12szo"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:inputType="number" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

				<TextView
					android:id="@+id/textView10"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/txt12Va"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/edit12va"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:inputType="number" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent" >

				<TextView
					android:id="@+id/textView11"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/txtSzab"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/editSzabi"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:inputType="number" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent" >

				<TextView
					android:id="@+id/textView12"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/txtFizUnn"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/editFizUnn"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:inputType="number" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>

</LinearLayout>